--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
     float: left;
     width: 21%;
     margin-right: 10px;
-    height: 97%;
+    height: auto;
     border-radius: 5px;
 }
 
